# acc_logic_ros

./: 99-turtlebot3-cdc.rules  turtlebot.txt
acc_logic_ros/: CMakeLists.txt
acc_logic_ros/src/: obj_subscriber.cpp
acc_logic_ros_v2/: readme.md
acc_logic_ros_v2/acc_logic_ros/: CMakeLists.txt
acc_logic_ros_v2/acc_logic_ros/src/: acc_logic_node.cpp
acc_logic_ros_v3/: readme.md
acc_logic_ros_v3/acc_logic_ros/: CMakeLists.txt  package.xml
acc_logic_ros_v3/acc_logic_ros/launch/: ai_acc_ros.launch  ai_acc_ros2.launch  subscan_test.launch
acc_logic_ros_v3/acc_logic_ros/src/: acc_logic_node2.cpp  obj_subscriber.cpp  scan_sub.cpp
